# table-diffusion

./: .gitignore  CLAUDE.md  PROJECT_STATUS.md  pyproject.toml
configs/nltcs/: init_marginals.json  measured_1000query.json  schema.yaml
configs/test_300x10/: init_marginals.json  measured_50query.json  schema.yaml
data/nltcs/: nltcs.csv
data/test_300x10/: attribute_value_meanings.csv  test_300x10.csv
docs/: add_new_query_operator.md  temp.md
docs/设计/: QUERIES_REFACTORING.md  初始化设计_1way边缘确定性初始化.md  选择强度与邻域尺度_温度重参数化.md
docs/进度/: 当前进度总结.md
scripts/: build_marginals.py  compare_init.py  gen_nltcs_queries.py  probe_beta_scale.py  probe_f_scaling.py  run.py  sweep.py
src/table_diffevo/: distance.py  evolution.py  fitness.py  generator.py  io.py  marginals.py  objective.py  queries.py  sampling.py  schema.py  update.py  utils.py  vectorized_eval.py
tests/: test_distance_gpu.py  test_environment.py  test_evolution.py  test_fitness.py  test_generator.py  test_io.py  test_marginals.py  test_objective.py  test_queries.py  test_sampling.py  test_sampling_gpu.py  test_schema_distance.py  test_update.py  test_utils.py  test_vectorized_eval.py
